--- a/home/dot-local/plasma/look-and-feel/Luna/metadata.desktop
+++ b/home/dot-local/plasma/look-and-feel/Luna/metadata.desktop
@@ -1,8 +1,9 @@
 [Desktop Entry]
 Comment=Derived from Expose by Phob1an
 Name=Luna
-X-KDE-PluginInfo-Author=Phob1an
+X-KDE-PluginInfo-Author=klapeto
 X-KDE-PluginInfo-Category=Plasma Look And Feel
+X-KDE-PluginInfo-Email=yiannispana13@gmail.com
 X-KDE-PluginInfo-EnabledByDefault=true
 X-KDE-PluginInfo-License=GPL 3+
 X-KDE-PluginInfo-Name=Luna
